--- a/spotify.html
+++ b/spotify.html
@@ -86,9 +86,12 @@
             width: 100%;
             max-width: 400px;
             height: auto;
-            margin-top: 20px;
+            margin-bottom: 20px;
             border-radius: 10px;
             box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .download-btn {
@@ -135,11 +138,11 @@
 
     <!-- Conteúdo Principal -->
     <div id="main-content" class="main-content hidden">
-        <h1>Download do APK para Android</h1>
-        <p>O "Spotify Premium Mod APK" refere-se a uma versão modificada do aplicativo Spotify Premium para Android. Em vez de obter o Spotify Premium através dos canais oficiais, onde você paga uma assinatura, o mod APK tenta oferecer os recursos do Spotify Premium gratuitamente. Esses recursos geralmente incluem a remoção de anúncios, a capacidade de ouvir músicas offline e a qualidade de áudio aprimorada.</p>
-        
         <!-- Imagem do Aplicativo -->
         <img src="https://via.placeholder.com/400x400?text=Imagem+do+App" alt="Imagem do Aplicativo" class="app-image">
+
+        <h1>Download do APK para Android</h1>
+        <p>O "Spotify Premium Mod APK" refere-se a uma versão modificada do aplicativo Spotify Premium para Android. Em vez de obter o Spotify Premium através dos canais oficiais, onde você paga uma assinatura, o mod APK tenta oferecer os recursos do Spotify Premium gratuitamente. Esses recursos geralmente incluem a remoção de anúncios, a capacidade de ouvir músicas offline e a qualidade de áudio aprimorada.</p>
         
         <!-- Botão de Download -->
         <a href="https://example.com/download/app.zip" class="download-btn" download>Baixar Agora</a>
