--- a/spotify.html
+++ b/spotify.html
@@ -128,8 +128,8 @@
     <!-- Anúncio Inicial -->
     <div id="ad-container" class="ad-container">
         <div class="ad-content">
-            <a href="https://example.com" target="_blank">
-                <img src="https://via.placeholder.com/800x400?text=Seu+Anúncio+Aqui" alt="Anúncio">
+            <a href="https://t.me/parallaxcloud" target="_blank">
+                <img src="https://i.ibb.co/mFCP2Yz/ANUNCIE-COM-A-GENTE.png" alt="Anúncio">
             </a>
             <div class="timer" id="timer">Fechar em 10 segundos...</div>
             <button id="close-ad-btn" class="close-ad-btn">Fechar Anúncio</button>
