--- a/spotify.html
+++ b/spotify.html
@@ -129,7 +129,7 @@
     <div id="ad-container" class="ad-container">
         <div class="ad-content">
             <a href="https://t.me/parallaxcloud" target="_blank">
-                <img src="https://i.ibb.co/mFCP2Yz/ANUNCIE-COM-A-GENTE.png" alt="Anúncio">
+                <img src="/anuncio/telegram.png" alt="Anúncio">
             </a>
             <div class="timer" id="timer">Fechar em 10 segundos...</div>
             <button id="close-ad-btn" class="close-ad-btn">Fechar Anúncio</button>
