--- a/spotify.html
+++ b/spotify.html
@@ -139,7 +139,7 @@
     <!-- Conteúdo Principal -->
     <div id="main-content" class="main-content hidden">
         <!-- Imagem do Aplicativo -->
-        <img src="https://github.com/TheKaceta/downloads/blob/main/anuncio/spotify.png" alt="Imagem do Aplicativo" class="app-image">
+        <img src="https://raw.githubusercontent.com/TheKaceta/downloads/main/anuncio/spotify.png" alt="Imagem do Aplicativo" class="app-image">
 
         <h1>Download do APK para Android</h1>
         <p>O "Spotify Premium Mod APK" refere-se a uma versão modificada do aplicativo Spotify Premium para Android. Em vez de obter o Spotify Premium através dos canais oficiais, onde você paga uma assinatura, o mod APK tenta oferecer os recursos do Spotify Premium gratuitamente. Esses recursos geralmente incluem a remoção de anúncios, a capacidade de ouvir músicas offline e a qualidade de áudio aprimorada.</p>
