--- a/spotify.html
+++ b/spotify.html
@@ -145,7 +145,7 @@
         <p>O "Spotify Premium Mod APK" refere-se a uma versão modificada do aplicativo Spotify Premium para Android. Em vez de obter o Spotify Premium através dos canais oficiais, onde você paga uma assinatura, o mod APK tenta oferecer os recursos do Spotify Premium gratuitamente. Esses recursos geralmente incluem a remoção de anúncios, a capacidade de ouvir músicas offline e a qualidade de áudio aprimorada.</p>
         
         <!-- Botão de Download -->
-        <a href="https://example.com/download/app.zip" class="download-btn" download>Baixar Agora</a>
+        <a href="http://20.201.114.237/downloads/spotify.apk" class="download-btn" download>Baixar Agora</a>
         
         <!-- Detalhes do Jogo -->
         <div class="details">
