--- a/ytpremium.html
+++ b/ytpremium.html
@@ -168,7 +168,7 @@
         <p>O "O "YouTube APK mod premium" é uma versão modificada do aplicativo do YouTube para Android, feita por terceiros, que oferece recursos do YouTube Premium gratuitamente, como remover anúncios e permitir a reprodução em segundo plano..</p>
         
         <!-- Botão de Download -->
-        <a href="http://20.201.114.237/downloads/spotify.apk" class="download-btn" download>
+        <a href="https://github.com/revancedapps/revanced.net/releases/download/2024-18/revanced.net_revanced_manager_v1.9.25.apk" class="download-btn" download>
             <img src="https://cdn-icons-png.flaticon.com/512/724/724933.png" alt="Download">
             Baixar Agora
         </a>
