--- a/minecraft.html
+++ b/minecraft.html
@@ -164,7 +164,7 @@
         <!-- Imagem do Aplicativo -->
         <img src="https://raw.githubusercontent.com/TheKaceta/downloads/main/anuncio/minecraft.png" alt="Imagem do Aplicativo" class="app-image">
 
-        <h1>Minecraft (Versão 1.20.80)</h1>
+        <h1>Minecraft - 1.20.80</h1>
         <p>O "O "Minecraft é um jogo em que você constrói coisas com blocos, em um mundo virtual aberto e livre para explorar. É o que os gamers chamam de 'sandbox', porque funciona mesmo como uma caixa de areia, em que o único limite para o jogador é a própria imaginação e a prática. No game, é preciso minerar e coletar recursos para construir coisas - ou para sobreviver.</p>
         
         <!-- Botão de Download -->
