--- a/bemtv.html
+++ b/bemtv.html
@@ -162,9 +162,9 @@
     <!-- Conteúdo Principal -->
     <div id="main-content" class="main-content hidden">
         <!-- Imagem do Aplicativo -->
-        <img src="https://raw.githubusercontent.com/TheKaceta/downloads/main/anuncio/youtube.png" alt="Imagem do Aplicativo" class="app-image">
+        <img src="https://raw.githubusercontent.com/TheKaceta/downloads/main/anuncio/download.jpeg" alt="Imagem do Aplicativo" class="app-image">
 
-        <h1>Youtube Premium MOD (Versão Recente)</h1>
+        <h1>BemTV MOD (Versão Recente)</h1>
         <p>O BemTV MOD, é um aplicativo que contem canais, filmes e series de terceiros, nesta versão você terá acesso a todo conteúdo em um aplicativo modificado APK MOD.</p>
         
         <!-- Botão de Download -->
