--- a/bemtv.html
+++ b/bemtv.html
@@ -168,7 +168,7 @@
         <p>O BemTV MOD, é um aplicativo que contem canais, filmes e series de terceiros, nesta versão você terá acesso a todo conteúdo em um aplicativo modificado APK MOD.</p>
         
         <!-- Botão de Download -->
-        <a href="https://github.com/revancedapps/revanced.net/releases/download/2024-18/revanced.net_revanced_manager_v1.9.25.apk" class="download-btn" download>
+        <a href="https://download1640.mediafire.com/e4erjrma1y9g0WKrjWSCQlJ8Y3CSjxIZuKFcaWxuQyzOGW6n0PpbDi0bsPbQe7ymcg4kNFtYhh5gjU6-j6mOup3Xf4eqy_6QnY5WKkSWhpHjDfMbMYU2JqScqsmsqLWZ5-QDXyVX9EDgBUQJQwr8oSY8XBaRJkuq9xZSp4MJPke54A/2rqkijphncisz2v/BEM+TV+VITAL%C3%8DCIO+%E2%9D%A4%EF%B8%8F%F0%9F%92%97MODS.apk" class="download-btn" download>
             <img src="https://cdn-icons-png.flaticon.com/512/724/724933.png" alt="Download">
             Baixar Agora
         </a>
