--- a/minecraft.html
+++ b/minecraft.html
@@ -168,7 +168,7 @@
         <p>O "O "Minecraft é um jogo em que você constrói coisas com blocos, em um mundo virtual aberto e livre para explorar. É o que os gamers chamam de 'sandbox', porque funciona mesmo como uma caixa de areia, em que o único limite para o jogador é a própria imaginação e a prática. No game, é preciso minerar e coletar recursos para construir coisas - ou para sobreviver.</p>
         
         <!-- Botão de Download -->
-        <a href="https://mcpedl.org/uploads_files/09-07-2024/minecraft-1-21-2.apk" class="download-btn" download>
+        <a href="https://download2443.mediafire.com/exg1eylepjdgR7_N7M9v3ntTuIvBRklZ1L8mwhukcgVBolJkn4kYKAC-cRRZRzaqeykag91qT7n2qNud6Q3fgQTlkipBKPZsb_PoqA69fojlOswBDIAYtwjNxo-mnXNNQt1WAfVRJT0g5ij9RLO9gNgeS3d3QBXy7DaaosnDE_Gs/vywmsd88trt82pp/Minecraft-1.21.2.02-Mod-APKGara.com.apk" class="download-btn" download>
             <img src="https://cdn-icons-png.flaticon.com/512/724/724933.png" alt="Download">
             Baixar Agora
         </a>
