--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,34 +8,44 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #f4f4f4;
+            background: linear-gradient(45deg, #4A90E2, #9013FE);
             margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            color: white;
         }
 
-        .main-content {
-            background-color: white;
-            padding: 40px;
-            border-radius: 10px;
-            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
-            text-align: center;
+        .container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 80%;
+            max-width: 1200px;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.1);
+            border-radius: 20px;
+            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
         }
 
-        .main-content h1 {
+        .content {
+            flex: 1;
+            padding-right: 20px;
+        }
+
+        .content h1 {
+            font-size: 36px;
             margin-bottom: 20px;
-            font-size: 28px;
-            color: #333;
+            color: white;
         }
 
-        .main-content p {
+        .content p {
             font-size: 18px;
-            color: #666;
             line-height: 1.6;
+            margin-bottom: 20px;
+            color: #e0e0e0;
         }
 
         .telegram-btn {
@@ -44,18 +55,12 @@
             font-size: 18px;
             cursor: pointer;
             transition: background 0.3s ease;
-            margin-top: 20px;
             text-decoration: none;
-            display: inline-block;
             color: white;
             background: linear-gradient(45deg, #0088cc, #006699);
-            display: flex;
+            display: inline-flex;
             align-items: center;
             justify-content: center;
-        }
-
-        .telegram-btn:hover {
-            background: linear-gradient(45deg, #006699, #0088cc);
         }
 
         .telegram-btn img {
@@ -64,24 +69,54 @@
             margin-right: 10px;
         }
 
+        .illustration {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .illustration img {
+            width: 100%;
+            max-width: 600px;
+            height: auto;
+        }
+
+        .nav-bar {
+            position: absolute;
+            top: 20px;
+            width: 100%;
+            display: flex;
+            justify-content: flex-end;
+            padding-right: 40px;
+        }
+
+        .nav-bar a {
+            color: white;
+            margin-left: 20px;
+            text-decoration: none;
+            font-size: 18px;
+        }
+
+        .nav-bar a:hover {
+            text-decoration: underline;
+        }
+
         .terms-container {
             margin-top: 20px;
             text-align: left;
             font-size: 16px;
-            color: #333;
-            border-top: 1px solid #ccc;
-            padding-top: 20px;
+            color: #e0e0e0;
         }
 
         .terms-container h2 {
             font-size: 22px;
-            color: #333;
+            color: white;
             margin-bottom: 10px;
         }
 
         .terms-container p {
             font-size: 16px;
-            color: #666;
             line-height: 1.5;
         }
 
@@ -116,43 +151,65 @@
         .reject-btn:hover {
             background-color: #da190b;
         }
-
     </style>
 </head>
+
 <body>
-    <!-- Conteúdo Principal -->
-    <div id="main-content" class="main-content">
-        <h1>Bem-vindo ao Nosso Site!</h1>
-        <p>Ficamos felizes em ter você aqui! Acompanhe nossos conteúdos exclusivos no canal do Telegram. Não perca nenhuma atualização e fique por dentro de todas as novidades.</p>
-        
-        <!-- Botão do Telegram -->
-        <a href="https://t.me/resenha_free" class="telegram-btn">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
-            Acesse nosso Telegram
-        </a>
 
-        <!-- Detalhes e Termos -->
-        <div class="terms-container">
-            <h2>Termos de Uso</h2>
-            <p>Este site é dedicado à disponibilização de aplicativos e não temos intenção de infringir direitos autorais. Ao continuar navegando, você aceita nossos termos e condições. Caso não concorde, pode optar por sair do site.</p>
+    <!-- Barra de Navegação -->
+    <div class="nav-bar">
+        <a href="#">Home</a>
+        <a href="#">Sobre</a>
+        <a href="#">Serviços</a>
+        <a href="#">Contato</a>
+    </div>
 
-            <div class="terms-actions">
-                <button id="accept-btn" class="terms-btn accept-btn">Aceitar</button>
-                <button id="reject-btn" class="terms-btn reject-btn">Recusar</button>
+    <!-- Container Principal -->
+    <div class="container">
+        <!-- Conteúdo Principal -->
+        <div class="content">
+            <h1>Bem-vindo ao Nosso Site!</h1>
+            <p>Acompanhe nossos conteúdos exclusivos no canal do Telegram. Não perca nenhuma atualização e fique por
+                dentro de todas as novidades. Fazemos anúncios personalizados, caso tenha interesse.</p>
+
+            <!-- Botão do Telegram -->
+            <a href="https://t.me/resenha_free" class="telegram-btn">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
+                Acesse nosso Telegram
+            </a>
+
+            <!-- Detalhes e Termos -->
+            <div class="terms-container">
+                <h2>Termos de Uso</h2>
+                <p>Este site é dedicado à disponibilização de aplicativos e não temos intenção de infringir direitos
+                    autorais. Ao continuar navegando, você aceita nossos termos e condições. Caso não concorde, pode
+                    optar por sair do site.</p>
+
+                <div class="terms-actions">
+                    <button id="accept-btn" class="terms-btn accept-btn">Aceitar</button>
+                    <button id="reject-btn" class="terms-btn reject-btn">Recusar</button>
+                </div>
             </div>
+        </div>
+
+        <!-- Ilustração -->
+        <div class="illustration">
+            <img src="https://raw.githubusercontent.com/TheKaceta/downloads/main/anuncio/teleg.png" alt="Ilustração de colaboração">
         </div>
     </div>
 
     <script>
         // Lógica para aceitar ou recusar os termos
-        document.getElementById('accept-btn').addEventListener('click', function() {
+        document.getElementById('accept-btn').addEventListener('click', function () {
             alert('Obrigado por aceitar nossos termos. Aproveite o conteúdo!');
         });
 
-        document.getElementById('reject-btn').addEventListener('click', function() {
+        document.getElementById('reject-btn').addEventListener('click', function () {
             alert('Você será redirecionado para fora do site.');
             window.location.href = 'https://www.google.com';
         });
     </script>
+
 </body>
+
 </html>
