--- a/index.html
+++ b/index.html
@@ -4,39 +4,113 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bem-vindo</title>
+    <title>Web Development</title>
     <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            background: linear-gradient(45deg, #4A90E2, #9013FE);
+        body, html {
             margin: 0;
             padding: 0;
+            font-family: 'Roboto', sans-serif;
+            height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            background: linear-gradient(135deg, #4A90E2, #9013FE);
             color: white;
         }
 
-        .container {
+        .terms-container {
             display: flex;
-            justify-content: space-between;
+            flex-direction: column;
+            justify-content: center;
             align-items: center;
+            background-color: rgba(0, 0, 0, 0.7);
+            padding: 30px;
+            border-radius: 10px;
+            text-align: center;
             width: 80%;
+            max-width: 600px;
+            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+        }
+
+        .terms-container h1 {
+            font-size: 32px;
+            margin-bottom: 20px;
+        }
+
+        .terms-container p {
+            font-size: 16px;
+            margin-bottom: 30px;
+            line-height: 1.6;
+        }
+
+        .terms-container button {
+            padding: 15px 30px;
+            border: none;
+            border-radius: 50px;
+            font-size: 18px;
+            cursor: pointer;
+            transition: background 0.3s ease;
+            margin: 10px;
+            width: 100%;
+            max-width: 200px;
+        }
+
+        .accept-btn {
+            background-color: #4CAF50;
+            color: white;
+        }
+
+        .accept-btn:hover {
+            background-color: #45a049;
+        }
+
+        .decline-btn {
+            background-color: #f44336;
+            color: white;
+        }
+
+        .decline-btn:hover {
+            background-color: #e53935;
+        }
+
+        .main-container {
+            display: none;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
             max-width: 1200px;
             padding: 20px;
+        }
+
+        .nav-bar {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            padding: 20px;
             background-color: rgba(255, 255, 255, 0.1);
-            border-radius: 20px;
-            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+        }
+
+        .nav-bar a {
+            color: white;
+            margin-left: 20px;
+            text-decoration: none;
+            font-size: 18px;
+        }
+
+        .nav-bar a:hover {
+            text-decoration: underline;
         }
 
         .content {
             flex: 1;
-            padding-right: 20px;
+            padding: 20px;
+            text-align: center;
         }
 
         .content h1 {
-            font-size: 36px;
+            font-size: 48px;
             margin-bottom: 20px;
             color: white;
         }
@@ -54,19 +128,18 @@
             border-radius: 50px;
             font-size: 18px;
             cursor: pointer;
-            transition: background 0.3s ease;
-            text-decoration: none;
+            background-color: #0088cc;
             color: white;
-            background: linear-gradient(45deg, #0088cc, #006699);
             display: inline-flex;
             align-items: center;
             justify-content: center;
+            text-decoration: none;
+            margin-top: 20px;
+            transition: background 0.3s ease;
         }
 
-        .telegram-btn img {
-            width: 20px;
-            height: 20px;
-            margin-right: 10px;
+        .telegram-btn:hover {
+            background-color: #006699;
         }
 
         .illustration {
@@ -74,6 +147,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            margin-top: 30px;
         }
 
         .illustration img {
@@ -81,132 +155,58 @@
             max-width: 600px;
             height: auto;
         }
-
-        .nav-bar {
-            position: absolute;
-            top: 20px;
-            width: 100%;
-            display: flex;
-            justify-content: flex-end;
-            padding-right: 40px;
-        }
-
-        .nav-bar a {
-            color: white;
-            margin-left: 20px;
-            text-decoration: none;
-            font-size: 18px;
-        }
-
-        .nav-bar a:hover {
-            text-decoration: underline;
-        }
-
-        .terms-container {
-            margin-top: 20px;
-            text-align: left;
-            font-size: 16px;
-            color: #e0e0e0;
-        }
-
-        .terms-container h2 {
-            font-size: 22px;
-            color: white;
-            margin-bottom: 10px;
-        }
-
-        .terms-container p {
-            font-size: 16px;
-            line-height: 1.5;
-        }
-
-        .terms-actions {
-            margin-top: 20px;
-            display: flex;
-            justify-content: space-around;
-        }
-
-        .terms-btn {
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background 0.3s ease;
-            color: white;
-        }
-
-        .accept-btn {
-            background-color: #4CAF50;
-        }
-
-        .accept-btn:hover {
-            background-color: #45a049;
-        }
-
-        .reject-btn {
-            background-color: #f44336;
-        }
-
-        .reject-btn:hover {
-            background-color: #da190b;
-        }
     </style>
 </head>
 
 <body>
 
-    <!-- Barra de Navegação -->
-    <div class="nav-bar">
-        <a href="#">Home</a>
-        <a href="#">Sobre</a>
-        <a href="#">Serviços</a>
-        <a href="#">Contato</a>
+    <!-- Container de Termos -->
+    <div id="terms-container" class="terms-container">
+        <h1>Termos e Condições</h1>
+        <p>Este é um site que oferece aplicativos para download. Não temos intenção de infringir direitos autorais.
+            Por favor, aceite os termos para continuar navegando.</p>
+        <button id="accept-btn" class="accept-btn">Aceitar</button>
+        <button id="decline-btn" class="decline-btn">Recusar</button>
     </div>
 
     <!-- Container Principal -->
-    <div class="container">
+    <div id="main-container" class="main-container">
+        <!-- Barra de Navegação -->
+        <div class="nav-bar">
+            <a href="#">Home</a>
+            <a href="#">Blog</a>
+            <a href="#">Issues</a>
+            <a href="#">Team</a>
+            <a href="#">Info</a>
+        </div>
+
         <!-- Conteúdo Principal -->
         <div class="content">
-            <h1>Bem-vindo ao Nosso Site!</h1>
-            <p>Acompanhe nossos conteúdos exclusivos no canal do Telegram. Não perca nenhuma atualização e fique por
-                dentro de todas as novidades. Fazemos anúncios personalizados, caso tenha interesse.</p>
-
-            <!-- Botão do Telegram -->
-            <a href="https://t.me/resenha_free" class="telegram-btn">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
-                Acesse nosso Telegram
-            </a>
-
-            <!-- Detalhes e Termos -->
-            <div class="terms-container">
-                <h2>Termos de Uso</h2>
-                <p>Este site é dedicado à disponibilização de aplicativos e não temos intenção de infringir direitos
-                    autorais. Ao continuar navegando, você aceita nossos termos e condições. Caso não concorde, pode
-                    optar por sair do site.</p>
-
-                <div class="terms-actions">
-                    <button id="accept-btn" class="terms-btn accept-btn">Aceitar</button>
-                    <button id="reject-btn" class="terms-btn reject-btn">Recusar</button>
-                </div>
-            </div>
+            <h1>Bem-vindo ao nosso site!</h1>
+            <p>Se você quiser acompanhar nossos conteúdos, siga nosso canal no Telegram. Nós também fazemos anúncios, caso tenha interesse!</p>
+            <a href="https://t.me/resenha_free" class="telegram-btn">Acesse nosso Telegram</a>
         </div>
 
         <!-- Ilustração -->
         <div class="illustration">
-            <img src="https://raw.githubusercontent.com/TheKaceta/downloads/main/anuncio/teleg.png" alt="Ilustração de colaboração">
+            <img src="https://via.placeholder.com/600x400.png" alt="Ilustração de desenvolvimento web">
         </div>
     </div>
 
     <script>
-        // Lógica para aceitar ou recusar os termos
-        document.getElementById('accept-btn').addEventListener('click', function () {
-            alert('Obrigado por aceitar nossos termos. Aproveite o conteúdo!');
+        // Ações de Aceitar e Recusar os Termos
+        const acceptBtn = document.getElementById('accept-btn');
+        const declineBtn = document.getElementById('decline-btn');
+        const termsContainer = document.getElementById('terms-container');
+        const mainContainer = document.getElementById('main-container');
+
+        acceptBtn.addEventListener('click', function() {
+            termsContainer.style.display = 'none';
+            mainContainer.style.display = 'flex';
         });
 
-        document.getElementById('reject-btn').addEventListener('click', function () {
-            alert('Você será redirecionado para fora do site.');
-            window.location.href = 'https://www.google.com';
+        declineBtn.addEventListener('click', function() {
+            window.location.href = "https://www.google.com"; // Redireciona para fora do site
         });
     </script>
 
