--- a/index.html
+++ b/index.html
@@ -4,212 +4,119 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Development</title>
+    <title>Bem-vindo ao Nosso Site de Aplicativos</title>
     <style>
-        body, html {
+        body {
+            font-family: 'Roboto', sans-serif;
+            background: linear-gradient(to right, #00c6ff, #0072ff);
+            color: white;
             margin: 0;
             padding: 0;
-            font-family: 'Roboto', sans-serif;
-            height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(135deg, #4A90E2, #9013FE);
-            color: white;
+            height: 100vh;
         }
 
-        .terms-container {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-color: rgba(0, 0, 0, 0.7);
-            padding: 30px;
-            border-radius: 10px;
-            text-align: center;
-            width: 80%;
-            max-width: 600px;
-            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
-        }
-
-        .terms-container h1 {
-            font-size: 32px;
-            margin-bottom: 20px;
-        }
-
-        .terms-container p {
-            font-size: 16px;
-            margin-bottom: 30px;
-            line-height: 1.6;
-        }
-
-        .terms-container button {
-            padding: 15px 30px;
-            border: none;
-            border-radius: 50px;
-            font-size: 18px;
-            cursor: pointer;
-            transition: background 0.3s ease;
-            margin: 10px;
-            width: 100%;
-            max-width: 200px;
-        }
-
-        .accept-btn {
-            background-color: #4CAF50;
-            color: white;
-        }
-
-        .accept-btn:hover {
-            background-color: #45a049;
-        }
-
-        .decline-btn {
-            background-color: #f44336;
-            color: white;
-        }
-
-        .decline-btn:hover {
-            background-color: #e53935;
-        }
-
-        .main-container {
-            display: none;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            max-width: 1200px;
-            padding: 20px;
-        }
-
-        .nav-bar {
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            padding: 20px;
+        .container {
             background-color: rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
-        }
-
-        .nav-bar a {
-            color: white;
-            margin-left: 20px;
-            text-decoration: none;
-            font-size: 18px;
-        }
-
-        .nav-bar a:hover {
-            text-decoration: underline;
-        }
-
-        .content {
-            flex: 1;
-            padding: 20px;
+            padding: 50px;
+            border-radius: 20px;
+            box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
+            max-width: 800px;
             text-align: center;
         }
 
-        .content h1 {
-            font-size: 48px;
+        h1 {
+            font-size: 36px;
             margin-bottom: 20px;
-            color: white;
+            color: #fff;
         }
 
-        .content p {
+        p {
             font-size: 18px;
             line-height: 1.6;
-            margin-bottom: 20px;
-            color: #e0e0e0;
+            color: #ddd;
         }
 
         .telegram-btn {
-            padding: 15px 30px;
+            background: linear-gradient(45deg, #0088cc, #006699);
             border: none;
             border-radius: 50px;
+            padding: 15px 30px;
             font-size: 18px;
             cursor: pointer;
-            background-color: #0088cc;
             color: white;
+            text-decoration: none;
             display: inline-flex;
             align-items: center;
-            justify-content: center;
-            text-decoration: none;
             margin-top: 20px;
             transition: background 0.3s ease;
         }
 
+        .telegram-btn img {
+            width: 24px;
+            height: 24px;
+            margin-right: 10px;
+        }
+
         .telegram-btn:hover {
-            background-color: #006699;
+            background: linear-gradient(45deg, #006699, #0088cc);
         }
 
-        .illustration {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 30px;
+        .terms-btn {
+            background: transparent;
+            border: 2px solid #fff;
+            border-radius: 50px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            color: white;
+            text-decoration: none;
+            margin-top: 20px;
+            display: inline-block;
+            transition: background 0.3s ease;
         }
 
-        .illustration img {
-            width: 100%;
-            max-width: 600px;
-            height: auto;
+        .terms-btn:hover {
+            background: rgba(255, 255, 255, 0.2);
+        }
+
+        .footer {
+            margin-top: 40px;
+            font-size: 14px;
+            color: #bbb;
+        }
+
+        .footer a {
+            color: #ddd;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        .footer a:hover {
+            color: white;
         }
     </style>
 </head>
 
 <body>
-
-    <!-- Container de Termos -->
-    <div id="terms-container" class="terms-container">
-        <h1>Termos e Condições</h1>
-        <p>Este é um site que oferece aplicativos para download. Não temos intenção de infringir direitos autorais.
-            Por favor, aceite os termos para continuar navegando.</p>
-        <button id="accept-btn" class="accept-btn">Aceitar</button>
-        <button id="decline-btn" class="decline-btn">Recusar</button>
+    <div class="container">
+        <h1>Bem-vindo ao Nosso Site de Aplicativos</h1>
+        <p>Nosso site é dedicado a fornecer uma variedade de aplicativos para download. Seja para entretenimento ou
+            utilidade, temos uma seleção diversificada para atender às suas necessidades.</p>
+        <p>Acompanhe todos os lançamentos e novidades através do nosso canal no Telegram. Lá você receberá atualizações
+            frequentes sobre novos aplicativos disponíveis para download.</p>
+        <p>Não temos a intenção de infringir qualquer direito autoral. Todos os aplicativos compartilhados são de fontes
+            públicas, e incentivamos os usuários a apoiar os desenvolvedores comprando versões oficiais sempre que
+            possível.</p>
+        <a href="https://t.me/resenha_free" class="telegram-btn">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
+            Siga nosso Canal no Telegram
+        </a>
+        <a href="termos.html" class="terms-btn">Leia os Termos de Uso</a>
+        <p class="footer">Ao continuar navegando, você concorda com nossos <a href="termos.html">termos de uso</a>.</p>
     </div>
-
-    <!-- Container Principal -->
-    <div id="main-container" class="main-container">
-        <!-- Barra de Navegação -->
-        <div class="nav-bar">
-            <a href="#">Home</a>
-            <a href="#">Blog</a>
-            <a href="#">Issues</a>
-            <a href="#">Team</a>
-            <a href="#">Info</a>
-        </div>
-
-        <!-- Conteúdo Principal -->
-        <div class="content">
-            <h1>Bem-vindo ao nosso site!</h1>
-            <p>Se você quiser acompanhar nossos conteúdos, siga nosso canal no Telegram. Nós também fazemos anúncios, caso tenha interesse!</p>
-            <a href="https://t.me/resenha_free" class="telegram-btn">Acesse nosso Telegram</a>
-        </div>
-
-        <!-- Ilustração -->
-        <div class="illustration">
-            <img src="https://via.placeholder.com/600x400.png" alt="Ilustração de desenvolvimento web">
-        </div>
-    </div>
-
-    <script>
-        // Ações de Aceitar e Recusar os Termos
-        const acceptBtn = document.getElementById('accept-btn');
-        const declineBtn = document.getElementById('decline-btn');
-        const termsContainer = document.getElementById('terms-container');
-        const mainContainer = document.getElementById('main-container');
-
-        acceptBtn.addEventListener('click', function() {
-            termsContainer.style.display = 'none';
-            mainContainer.style.display = 'flex';
-        });
-
-        declineBtn.addEventListener('click', function() {
-            window.location.href = "https://www.google.com"; // Redireciona para fora do site
-        });
-    </script>
-
 </body>
 
 </html>
