--- a/index.html
+++ b/index.html
@@ -7,125 +7,117 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background: linear-gradient(45deg, #2c3e50, #4ca1af);
+            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
             margin: 0;
             padding: 0;
+            color: #fff;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            color: #fff;
         }
 
-        .modal {
-            background-color: #fff;
-            color: #333;
-            padding: 40px;
-            border-radius: 10px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-            max-width: 600px;
-            width: 100%;
+        .container {
             text-align: center;
+            max-width: 800px;
+            padding: 40px;
+            background-color: rgba(0, 0, 0, 0.7);
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
         }
 
-        .modal h2 {
+        h1 {
+            font-size: 48px;
             margin-bottom: 20px;
-            font-size: 24px;
+            letter-spacing: 2px;
         }
 
-        .modal p {
-            font-size: 16px;
-            line-height: 1.6;
-            margin-bottom: 20px;
-        }
-
-        .modal button {
-            padding: 15px 30px;
-            border: none;
-            border-radius: 50px;
+        p {
             font-size: 18px;
-            cursor: pointer;
-            transition: background 0.3s ease;
-            margin: 10px;
+            line-height: 1.6;
+            margin-bottom: 30px;
+        }
+
+        a.telegram-btn {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            padding: 12px 25px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            font-size: 16px;
+            color: #fff;
+            background-color: #0088cc;
+            border-radius: 50px;
             text-decoration: none;
+            transition: background 0.3s ease;
         }
 
-        .accept-btn {
-            background-color: #28a745;
-            color: white;
+        a.telegram-btn:hover {
+            background-color: #006699;
         }
 
-        .accept-btn:hover {
-            background-color: #218838;
+        .telegram-btn img {
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
         }
 
-        .decline-btn {
-            background-color: #dc3545;
-            color: white;
+        .section {
+            margin-top: 50px;
         }
 
-        .decline-btn:hover {
-            background-color: #c82333;
+        .section h2 {
+            font-size: 32px;
+            margin-bottom: 20px;
         }
 
-        .hidden {
-            display: none;
+        .section p {
+            font-size: 16px;
+            margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
 
-    <!-- Modal de Termos de Uso -->
-    <div class="modal" id="terms-modal">
-        <h2>Termos de Uso</h2>
-        <p>
-            Bem-vindo ao Resenha Free, um site dedicado ao download de aplicativos para Android. 
-            Nós nos comprometemos a oferecer conteúdo de qualidade e a proteger os direitos autorais dos criadores. 
-            Não temos a intenção de infringir quaisquer direitos autorais, e todos os aplicativos são fornecidos para fins de análise e teste.
-        </p>
-        <p>
-            Ao acessar nosso site, você concorda em não redistribuir os aplicativos baixados sem a permissão adequada dos criadores. 
-            Caso tenha interesse em anunciar em nosso site, entre em contato conosco através do nosso canal no Telegram.
-        </p>
-        <p>
-            Se você concorda com os termos, clique em "Aceitar". Caso contrário, clique em "Recusar" para sair do site.
-        </p>
-        <button class="accept-btn" id="accept-btn">Aceitar</button>
-        <button class="decline-btn" id="decline-btn">Recusar</button>
-    </div>
-
-    <!-- Conteúdo Principal -->
-    <div id="main-content" class="hidden">
+    <div class="container">
         <h1>Bem-vindo ao Resenha Free!</h1>
-        <p>Aqui você encontra os melhores aplicativos para Android, todos disponíveis para download gratuito.</p>
-        <p>Siga nosso canal no Telegram para ficar por dentro das novidades e acompanhar os últimos lançamentos.</p>
+        <p>
+            Aqui você encontra os melhores aplicativos para Android, todos disponíveis para download gratuito. 
+            Nosso objetivo é facilitar o acesso a aplicativos de qualidade, proporcionando uma experiência única 
+            e segura para os usuários.
+        </p>
+        <p>
+            Siga nosso canal no Telegram para ficar por dentro das novidades e acompanhar os últimos lançamentos 
+            de aplicativos. No nosso canal, você encontra informações detalhadas e atualizações frequentes sobre 
+            os apps mais populares e úteis.
+        </p>
 
         <!-- Botão do Telegram -->
         <a href="https://t.me/resenha_free" class="telegram-btn">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" style="width: 20px; height: 20px; margin-right: 10px;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
             Acesse nosso Telegram
         </a>
 
-        <!-- Anunciar Conosco -->
-        <div class="details">
+        <div class="section">
             <h2>Quer anunciar em nossas abas?</h2>
-            <p>Entre em contato conosco pelo nosso canal do Telegram.</p>
+            <p>Entre em contato conosco pelo nosso canal do Telegram. Estamos abertos a parcerias e colaborações.</p>
             <a href="https://t.me/resenha_free" class="telegram-btn">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" style="width: 20px; height: 20px; margin-right: 10px;">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
                 Fale Conosco no Telegram
             </a>
         </div>
+
+        <div class="section">
+            <h2>Nossa Intenção</h2>
+            <p>
+                Não temos a intenção de infringir quaisquer direitos autorais. Todos os aplicativos 
+                disponíveis no Resenha Free são fornecidos exclusivamente para análise e teste. 
+                Se você é detentor de direitos sobre algum aplicativo e deseja que ele seja removido, 
+                entre em contato conosco, e tomaremos as medidas necessárias.
+            </p>
+        </div>
     </div>
 
-    <script>
-        document.getElementById('accept-btn').addEventListener('click', function() {
-            document.getElementById('terms-modal').classList.add('hidden');
-            document.getElementById('main-content').classList.remove('hidden');
-        });
-
-        document.getElementById('decline-btn').addEventListener('click', function() {
-            window.location.href = 'https://www.google.com';
-        });
-    </script>
 </body>
 </html>
