--- a/picsart.html
+++ b/picsart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Picsart Mod</title>
+    <title>Picsart Mod Premium v2</title>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -164,8 +164,8 @@
         <!-- Imagem do Aplicativo -->
         <img src="https://raw.githubusercontent.com/TheKaceta/downloads/main/anuncio/picsartmod.png" alt="Imagem do Aplicativo" class="app-image">
 
-        <h1>PicsArt MOD</h1>
-        <p>O "PicsArt MOD é um app de edição de fotos e video disponivel para android, nesta versão temos todos os itens premium desbloqueados.</p>
+        <h1>PicsArt MOD by Canelinha</h1>
+        <p>O "PicsArt MOD é um app de edição de fotos e video disponivel para android, nesta versão temos todos os itens premium desbloqueados. Versão do canelinha</p>
         
         <!-- Botão de Download -->
         <a href="https://dl.picsartmodapk.io/PicsArt_v25.6_MOD-picsartmodapk.io.apk?_gl=1*dsgalq*_ga*MTU3NDg1ODYzMi4xNzIzOTQ2OTI5*_ga_VMYKNJRP2X*MTcyMzk0NjkyOC4xLjEuMTcyMzk0NjkzNS4wLjAuMA.." class="download-btn" download>
