--- a/gtavlite.html
+++ b/gtavlite.html
@@ -164,7 +164,7 @@
         <!-- Imagem do Aplicativo -->
         <img src="https://raw.githubusercontent.com/TheKaceta/downloads/main/anuncio/gta5.png" alt="Imagem do Aplicativo" class="app-image">
 
-        <h1>Spotify Premium MOD (Versão Recente)</h1>
+        <h1>GTA 5 - Lite Compressed</h1>
         <p>O Grand Theft Auto V (GTA 5) é um jogo elétronico desenvolvido pela rockstar games de desktop que simula criminalidade em toda cidade Los Santos. Nesta versão Lite, você poderá aproveitar todo o desempenho que seu aparelho oferece! .</p>
         
         <!-- Botão de Download -->
