--- a/kiwify.html
+++ b/kiwify.html
@@ -152,7 +152,7 @@
     <div id="ad-container" class="ad-container">
         <div class="ad-content">
             <a href="https://www.bbrbet51.com/c-wRZKemom?lang=pt" target="_blank">
-                <img src="https://raw.githubusercontent.com/TheKaceta/downloads/main/anuncio/kiwify.png" alt="Anúncio">
+                <img src="https://raw.githubusercontent.com/TheKaceta/downloads/main/anuncio/images.png" alt="Anúncio">
             </a>
             <div class="timer" id="timer">Fechar em 10 segundos...</div>
             <button id="close-ad-btn" class="close-ad-btn">Fechar Anúncio</button>
@@ -162,7 +162,7 @@
     <!-- Conteúdo Principal -->
     <div id="main-content" class="main-content hidden">
         <!-- Imagem do Aplicativo -->
-        <img src="https://raw.githubusercontent.com/TheKaceta/downloads/main/anuncio/images.png" alt="Imagem do Aplicativo" class="app-image">
+        <img src="https://raw.githubusercontent.com/TheKaceta/downloads/main/anuncio/kiwify.jpg" alt="Imagem do Aplicativo" class="app-image">
 
         <h1>Gerador de notificação Kiwify</h1>
         <p> Este aplicativo gera notificações de vendas de produtos na plataforma kiwify e tem o objetivo de simula-las para atrair clientes e deixa-los mais confiantes sobre o tal produto! </p>
